--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "1.3.2",
-    "expo-location": "~15.1.1"
+    "expo-location": "~15.1.1",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
