--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "expo": "~48.0.18",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "1.3.2",
-    "expo-location": "~15.1.1",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-size-matters": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@emotion/babel-plugin": "^11.11.0",
     "@types/react": "~18.0.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^4.9.4"
